# postgresql-job-queue-benchmarking

./: .gitignore  .gitmodules  CONTRIBUTING_ADAPTERS.md  LICENSE  README.md  SYSTEM_COMPARISONS.md  UNIFIED_DRIVER_DESIGN.md  awa_semantics.py  bench.py  chaos.py  docker-compose.yml  full_suite.py  init-databases.sql  isolated.py  long_horizon.py  postgres.conf  pyproject.toml  run.py  worker_scale.py
.github/workflows/: ci.yml
absurd-bench/: Dockerfile  adapter.json  main.py  pyproject.toml
awa-bench/: Cargo.toml  Dockerfile  adapter.json
awa-bench/src/: long_horizon.rs  main.rs
bench_harness/: __init__.py  adapters.py  combine.py  compare.py  config.py  hooks.py  metrics.py  orchestrator.py  pacer.py  phases.py  plots.py  replica_pool.py  report.py  sample.py  versions.py  wait_events.py  writers.py
docs/: method.md  wait-events.md
docs/adrs/: 001-unified-phase-driver.md  README.md
oban-bench/: Dockerfile  adapter.json  mix.exs
oban-bench/config/: config.exs
oban-bench/lib/: oban_bench.ex
pgboss-bench/: Dockerfile  README.md  adapter.json  main.js  package-lock.json  package.json
pgmq-bench/: Dockerfile  README.md  adapter.json  main.py  pyproject.toml
pgque-bench/: Dockerfile  adapter.json  main.py  pyproject.toml
procrastinate-bench/: Dockerfile  adapter.json  main.py  pyproject.toml
results/2026-04-28/: SUMMARY.md
results/2026-05-01-awa-extended-scaling/: SUMMARY.md  matrix.csv
results/2026-05-01-awa-longtx-pg-ash/: SUMMARY.md  manifest.json  (+1 more)
river-bench/: Dockerfile  adapter.json  go.mod  go.sum  main.go
scripts/: render_baseline_vs_bulk.py  render_readme_plots.py  run_full_sweep.sh
tests/: test_harness_smoke.py
(+90 files in other folders)
