[project]
name = "pg-queue-bench-harness"
version = "0.1.0"
description = "Benchmarking harness comparing PostgreSQL-backed job queue systems (awa, river, oban, procrastinate, pgmq, pg-boss, PgQ, …)"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2",
  "matplotlib>=3.9",
  "pandas>=2.2",
  "numpy>=2.0",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
]

[project.scripts]
bench = "bench_harness.orchestrator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bench_harness"]
