[package]
name = "awa-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "awa-bench"
path = "src/main.rs"

[dependencies]
awa-model = { path = "../../awa/awa-model" }
awa-worker = { path = "../../awa/awa-worker" }
awa-macros = { path = "../../awa/awa-macros" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hdrhistogram = "7"
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
